add paragraph to index

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Wow - Stranica!</h1>
+    <p>Ovo je najbolja web stranica u Kantonu Sarajevo, a vjerovatno i šire.</p>
 </body>
 </html>
