add ul to index html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Wow - Stranica!</h1>
     <p>Ovo je najbolja web stranica u Kantonu Sarajevo, a vjerovatno i šire.</p>
+    <ul>
+        <li>GitHub</li>
+        <li>GitLab</li>
+        <li>BitBucket</li>
+    </ul>
 </body>
 </html>
