add github link

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <li>GitLab</li>
         <li>BitBucket</li>
     </ul>
+    <a href="http://www.github.com" target="_blank" rel="noopener noreferrer">GitHub website</a>
 </body>
 </html>
