Dodano 5 boja, rangirano

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <li>GitHub</li>
         <li>BitBucket</li>
     </ul>
+    <h1>5 boja:</h1>
+    <p>Crna</p>
+    <p>Zelena</p>
+    <p>Crvena</p>
+    <p>Siva</p>
+    <p>Narandzasta</p>
     <a href="http://www.github.com" target="_blank" rel="noopener noreferrer">GitHub website</a>
 </body>
 </html>
