add footer to index:

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <li>BitBucket</li>
     </ul>
     <a href="http://www.github.com" target="_blank" rel="noopener noreferrer">GitHub website</a>
+    <footer>
+        Encode 2025
+    </footer>
 </body>
 </html>
